[package]
name = "ldv-rs"
description = "a rust library for manipulating luduvo `.ldv` files"
version = "0.1.3"
authors = ["primiti_ve"]
readme = "README.md"
repository = "https://github.com/luduvo-devhub/ldv-rs"
license = "MIT"
edition = "2024"

[dependencies]
fixedstr = "0.5.10"
thiserror = "2.0.18"

[features]
default = ["dom", "prelude"]
prelude = []
dom = []

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = []
targets = []
